welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:20: error: type mismatch;
 found   : Int
 required: Boolean
	if (v)
            ^